<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_layout"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="50dp"
    tools:context="com.cmg.covid19app.nameFragment"
    android:layout_margin="7dp"
    android:padding="30dp"
    >


    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/first_name_text"

        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/firstName_hint"
        android:inputType="textPersonName"
        android:text=""

        android:textColor="@color/black" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/last_name_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/lastName_hint"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black" />
</LinearLayout>