<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="50dp"
    android:background="@drawable/rounded_layout"
    tools:context="com.cmg.covid19app.question3">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="7sp"
        android:paddingTop="10sp"
        android:paddingBottom="2sp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/question_3"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/ques3_text"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/q3"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/optionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:paddingTop="13sp"
        android:paddingBottom="15sp">

        <RadioButton
            android:id="@+id/yesButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingStart="5sp"
            android:paddingBottom="2sp"
            android:text="@string/yes_text"
            android:textSize="18sp"  />

        <RadioButton
            android:id="@+id/noButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:paddingStart="5sp"
            android:paddingTop="5sp"
            android:text="@string/no_text"
            android:textSize="18sp"  />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/placeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingTop="5dp"
        android:visibility="visible">

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/internationalButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:textOff="@string/international_text"
            android:fontFamily="sans-serif-smallcaps"
            android:textOn="@string/international_text"
            android:textSize="12sp"
            app:checkedColor="@color/darkViolet"
            app:checkedTextColor="@color/white"
            app:radius="5sp"
            app:uncheckedColor="@color/darkViolet">

        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/indiaButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textOff="@string/indiaButton_text"
            android:textOn="@string/indiaButton_text"
            android:textSize="12sp"
            app:checkedColor="@color/darkViolet"
            app:checkedTextColor="@color/white"
            app:radius="5sp"
            app:uncheckedColor="@color/darkViolet"

            >

        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>



    </LinearLayout>

    <TextView
        android:id="@+id/placeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_text"
        android:textSize="14sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"
        android:layout_marginTop="9dp"
        android:layout_marginStart="10dp"

        />

    <Spinner
        android:id="@+id/placeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginStart="10dp"
        />


</LinearLayout>